# thin-edge.io

./: .gitattributes  .gitignore  .rustfmt.toml  .taplo.toml  .typos.toml  AGENTS.md  BUILDING.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODING_GUIDELINES.md  CONTRIBUTING.md  CONTRIBUTOR-LICENSE-AGREEMENT.md  Cargo.toml  GOVERNANCE.md  Install-setup-c8y.sh  Makefile.toml  README.md  cliff.toml  clippy.toml  configure-c8y.sh  deny.toml  doc-sync.yml  get-thin-edge_io.sh  install.sh  justfile  release.toml  status.md  uninstall-thin-edge_io.sh  vision.md  working_manifest.md
common/batcher/: Cargo.toml
common/batcher/src/: batch.rs  batchable.rs  batcher.rs  config.rs  driver.rs
common/certificate/: Cargo.toml
common/certificate/src/: device_id.rs  lib.rs  validate_device_id.rs
common/flockfile/: Cargo.toml
common/flockfile/src/: lib.rs  unix.rs  windows.rs
common/mqtt_channel/: Cargo.toml
common/mqtt_channel/src/: config.rs  connection.rs  errors.rs  lib.rs  messages.rs  tests.rs  topics.rs
common/mqtt_client/: Cargo.toml
common/mqtt_client/examples/: packets_outof_limit.rs  publish_test.rs  sawtooth_publisher.rs  simple_mapper.rs  temperature_publisher.rs
common/mqtt_client/src/: lib.rs
common/mqtt_client/tests/: integration_test.rs  mqtt_pub_sub_test.rs  packet_size_tests.rs  packets_within_limit.rs  rumqttd_broker.rs
common/mqtt_tests/: Cargo.toml
common/mqtt_tests/src/: lib.rs  message_logger.rs  test_mqtt_client.rs  test_mqtt_server.rs  with_timeout.rs
common/service/: Cargo.toml  DISCUSSION.md
common/service/examples/: echo_service.rs
common/service/src/: lib.rs  signals.rs
common/tedge_utils/: Cargo.toml
common/tedge_utils/src/: fs.rs  lib.rs  logging.rs  paths.rs
dm-agent/: Cargo.toml
dm-agent/src/: batcher.rs  main.rs  monitor.rs  mqtt.rs
mapper/az_mapper/: Cargo.toml
mapper/az_mapper/src/: az_converter.rs  az_mapper.rs  lib.rs  size_threshold.rs
mapper/collectd_mapper/: Cargo.toml
mapper/collectd_mapper/src/: batcher.rs  collectd.rs  error.rs  functional_batcher.rs  main.rs  message_batcher.rs  monitor.rs
mapper/cumulocity-mapper/: Cargo.toml
mapper/cumulocity-mapper/src/: main.rs  mapper.rs
mapper/cumulocity-mapper/tests/: integration_test.rs
mapper/dm_agent/: Cargo.toml  README.md
mapper/dm_agent/src/: batcher.rs  collectd.rs  error.rs  lib.rs  main.rs  monitor.rs  mqtt.rs
mapper/dm_mapper/: Cargo.toml
mapper/dm_mapper/src/: batcher.rs  lib.rs
mapper/software_management/: Cargo.toml  README.md
mapper/software_management/examples/: sm-agent.rs  tedge-debian-plugin.rs
mapper/software_management/src/: lib.rs  message.rs  plugin.rs  plugin_manager.rs  software.rs
mapper/tedge_mapper/: Cargo.toml  README.md
mapper/tedge_mapper/src/: az_converter.rs  az_mapper.rs  c8y_converter.rs  c8y_mapper.rs  child.rs  component.rs  converter.rs  error.rs  main.rs  mapper.rs  size_threshold.rs  time_provider.rs
mapper/tedge_mapper/tests/: c8y_threshold_packet_size.rs
mapper/thin_edge_json/: Cargo.toml
mapper/thin_edge_json/benches/: gen_test_data.rb  parsing.rs
mapper/thin_edge_json/examples/: tej_example.rs  validate.rs
mapper/thin_edge_json/src/: builder.rs  group.rs  grouper.rs  json.rs  lib.rs  measurement.rs  parser.rs  serialize.rs  serializer.rs  stream.rs
mapper/thin_edge_json/tests/: test_suite.rs
mqtt/mqtt_client/: Cargo.toml
mqtt/mqtt_client/examples/: moskito.rs  publish_test.rs  simple_mapper.rs  temperature_publisher.rs
mqtt/mqtt_client/src/: lib.rs
mqtt/mqtt_client/tests/: integration_test.rs
plugins/c8y_configuration_plugin/: Cargo.toml
plugins/c8y_configuration_plugin/src/: child_device.rs  config.rs  config_manager.rs  download.rs  error.rs  lib.rs  main.rs  operation.rs  smartrest.rs  tests.rs  topic.rs  upload.rs
plugins/c8y_firmware_plugin/: Cargo.toml
plugins/c8y_firmware_plugin/src/: child_device.rs  common.rs  download.rs  entry.rs  error.rs  firmware_manager.rs  lib.rs  main.rs  message.rs  tests.rs  timers.rs
plugins/c8y_log_plugin/: Cargo.toml
plugins/c8y_log_plugin/src/: config.rs  error.rs  logfile_request.rs  main.rs
plugins/c8y_remote_access_plugin/: Cargo.toml
plugins/c8y_remote_access_plugin/src/: auth.rs  config.rs  csv.rs  input.rs  lib.rs  main.rs  proxy.rs
plugins/log_request_plugin/: Cargo.toml
plugins/log_request_plugin/src/: main.rs  smartrest.rs
plugins/netdata-collector/: Cargo.toml
plugins/netdata-collector/src/: main.rs
plugins/plugin_httpstop/: Cargo.toml  README.md
plugins/plugin_httpstop/src/: lib.rs
plugins/tedge_apama_plugin/: Cargo.toml
plugins/tedge_apama_plugin/src/: error.rs  main.rs
tedge/: Cargo.toml  README.md
tedge-mapper/: Cargo.toml
tedge-mapper/src/: main.rs  mapper.rs
tedge/debian/: postinst
tedge/src/: certificate.rs  cli.rs  command.rs  config.rs  error.rs  main.rs  mqtt.rs  privsep.rs
tedge/src/cli/: connect.rs  mod.rs  mqtt.rs
tedge/src/config/: error.rs  mod.rs  tedge_config.rs
tedge/src/services/: mod.rs  mosquitto.rs  tedge_mapper.rs  tedge_mapper_az.rs  tedge_mapper_c8y.rs
tedge/src/settings/: azure_url.rs  c8y_url.rs  device_id.rs  mod.rs
tedge/src/system_command/: error.rs  mod.rs  role.rs  system_command.rs  system_command_runner.rs  unix_system_command_runner.rs
tedge/src/system_commands/: core.rs  mod.rs  system_command_runner.rs  system_commands.rs
tedge/src/system_services/: error.rs  factory.rs  mod.rs  services.rs
tedge/src/types/: connect_url.rs
tedge/src/utils/: config.rs  files.rs  mod.rs  paths.rs  services.rs  signals.rs  users.rs
tedge/tests/: main.rs  mqtt.rs
tedge/tests/os_related/: mod.rs  unix.rs
tedge_config/: Cargo.toml
tedge_config/src/: config_manager.rs  config_setting.rs  error.rs  lib.rs  settings.rs  tedge_config.rs  tedge_config_defaults.rs  tedge_config_dto.rs  tedge_config_location.rs  tedge_config_repository.rs  traits.rs
tedge_config/src/models/: buffer.rs  connect_url.rs  file_path.rs  flag.rs  mod.rs  port.rs
tedge_config/src/providers/: mod.rs
tedge_config/src/tedge_config/: data.rs  (+1 more)
tedge_config/tests/: test_tedge_config.rs
(+3562 files in other folders)
