[workspace]
members = [
    "crates/common/*",
    "crates/core/*",
    "crates/extensions/*",
    "crates/tests/*",
    "plugins/c8y_firmware_plugin",
    "plugins/c8y_remote_access_plugin",
    "plugins/tedge_apt_plugin",
]
resolver = "2"

[workspace.package]
version = "1.3.1"
authors = ["thin-edge.io team <info@thin-edge.io>"]
edition = "2021"
rust-version = "1.78"
license = "Apache-2.0"
homepage = "https://thin-edge.io"
repository = "https://github.com/thin-edge/thin-edge.io"

[workspace.dependencies]
# workspace crates
aws_mapper_ext = { path = "crates/extensions/aws_mapper_ext" }
axum_tls = { path = "crates/common/axum_tls" }
az_mapper_ext = { path = "crates/extensions/az_mapper_ext" }
batcher = { path = "crates/common/batcher" }
c8y-firmware-plugin = { path = "plugins/c8y_firmware_plugin" }
c8y-remote-access-plugin = { path = "plugins/c8y_remote_access_plugin" }
c8y_api = { path = "crates/core/c8y_api" }
c8y_auth_proxy = { path = "crates/extensions/c8y_auth_proxy" }
c8y_firmware_manager = { path = "crates/extensions/c8y_firmware_manager" }
c8y_http_proxy = { path = "crates/extensions/c8y_http_proxy" }
c8y_mapper_ext = { path = "crates/extensions/c8y_mapper_ext" }
certificate = { path = "crates/common/certificate" }
clock = { path = "crates/common/clock" }
collectd_ext = { path = "crates/extensions/collectd_ext" }
download = { path = "crates/common/download" }
flockfile = { path = "crates/common/flockfile" }
json-writer = { path = "crates/common/json_writer" }
log_manager = { path = "crates/common/log_manager" }
mqtt_channel = { path = "crates/common/mqtt_channel" }
mqtt_tests = { path = "crates/tests/mqtt_tests" }
plugin_sm = { path = "crates/core/plugin_sm" }
tedge-agent = { path = "crates/core/tedge_agent" }
tedge-apt-plugin = { path = "plugins/tedge_apt_plugin" }
tedge-mapper = { path = "crates/core/tedge_mapper" }
tedge-watchdog = { path = "crates/core/tedge_watchdog" }
tedge-write = { path = "crates/core/tedge_write" }
tedge_actors = { path = "crates/core/tedge_actors" }
tedge_api = { path = "crates/core/tedge_api" }
tedge_config = { path = "crates/common/tedge_config" }
tedge_config_macros = { path = "crates/common/tedge_config_macros" }
tedge_config_macros-impl = { path = "crates/common/tedge_config_macros/impl" }
tedge_config_manager = { path = "crates/extensions/tedge_config_manager" }
tedge_downloader_ext = { path = "crates/extensions/tedge_downloader_ext" }
tedge_file_system_ext = { path = "crates/extensions/tedge_file_system_ext" }
tedge_health_ext = { path = "crates/extensions/tedge_health_ext" }
tedge_http_ext = { path = "crates/extensions/tedge_http_ext" }
tedge_log_manager = { path = "crates/extensions/tedge_log_manager" }
tedge_mqtt_bridge = { path = "crates/extensions/tedge_mqtt_bridge" }
tedge_mqtt_ext = { path = "crates/extensions/tedge_mqtt_ext" }
tedge_script_ext = { path = "crates/extensions/tedge_script_ext" }
tedge_signal_ext = { path = "crates/extensions/tedge_signal_ext" }
tedge_test_utils = { path = "crates/tests/tedge_test_utils" }
tedge_timer_ext = { path = "crates/extensions/tedge_timer_ext" }
tedge_uploader_ext = { path = "crates/extensions/tedge_uploader_ext" }
tedge_utils = { path = "crates/common/tedge_utils" }
upload = { path = "crates/common/upload" }

# external dependencies

anstyle = "1.0"
anyhow = "1.0"
assert-json-diff = "2.0"
assert_cmd = "2.0"
assert_matches = "1.5"
async-compat = "0.2.1"
async-log = "2.0"
async-trait = "0.1"
async-tungstenite = { version = "0.23", features = [
    "tokio-runtime",
    "tokio-rustls-native-certs",
] }
axum = "0.6"
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
backoff = { version = "0.4", features = ["tokio"] }
base64 = "0.13"
bytes = "1.4"
camino = "1.1"
cap = "0.1"
clap = { version = "4.4", features = [
    "cargo",
    "derive",
    "string",
    "env",
    "unstable-styles",
] }
csv = "1.1"
darling = "0.20"
doku = "0.21"
easy_reader = "0.5"
env_logger = "0.10"
fastrand = "1.8"
figment = { version = "0.10" }
filetime = "0.2"
freedesktop_entry_parser = "1.3.0"
futures = "0.3"
futures-timer = "3.0"
futures-util = "0.3.25"
glob = "0.3"
heck = "0.4.1"
http = "0.2"
http-body = "0.4"
httparse = "1.9.3"
humantime = "2.1.0"
hyper = { version = "0.14", default-features = false }
hyper-rustls = { version = "0.24", default-features = false, features = [
    "tokio-runtime",
    "tls12",
    "rustls-native-certs",
    "http1",
    "http2",
] }
itertools = "0.13"
lazy_static = "1.4"
log = "0.4"
maplit = "1.0"
miette = { version = "5.5.0", features = ["fancy"] }
mime = "0.3.17"
mime_guess = "2.0.4"
mockall = "0.11"
mockito = "1.1.0"
mutants = "0.0.3"
nanoid = "0.4"
nix = "0.26"
notify = { version = "6.1.1", default-features = false }
notify-debouncer-full = { version = "0.3.1", default-features = false }
once_cell = "1.8"
pad = "0.1"
path-clean = "0.1"
pem = "1.0"
pin-project = { version = "1.1.3", features = [] }
predicates = "2.1"
pretty_assertions = "1.4.1"
prettyplease = "0.2.22"
proc-macro2 = "1"
proptest = "1.0"
quote = "1"
rand = "0.8"
rcgen = { version = "0.12", features = ["pem", "zeroize"] }
regex = "1.4"
reqwest = { version = "0.11", default-features = false }
rpassword = "5.0"
rstest = "0.16.0"
rumqttc = "0.23"
# TODO: used git rev version to fix `unknown feature stdsimd` error: replace with 0.20 version after the release
rumqttd = { git = "https://github.com/bytebeamio/rumqtt", rev = "0767080715699c34d8fe90b843716ba5ec12f8b9" }
rustls = "0.21.11"
rustls-native-certs = "0.6.3"
rustls-pemfile = "1.0.1"
serde = "1.0"
serde_ignored = "0.1"
serde_json = "1.0"
serial_test = "0.8"
sha-1 = "0.10"
sha256 = "1.1"
shell-words = "1.1"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
strum = "0.24"
strum_macros = "0.24"
syn = { version = "2", features = ["full", "extra-traits"] }
tempfile = "3.12"
test-case = "3.2"
thiserror = "1.0"
time = "0.3"
tokio = { version = "1.37", default-features = false }
tokio-rustls = "0.24.1"
tokio-tungstenite = { version = "0.20.0" }
tokio-util = { version = "0.7", features = ["codec"] }
toml = "0.7"
tower = "0.4"
tracing = { version = "0.1", features = ["attributes", "log"] }
tracing-subscriber = { version = "0.3", features = ["time", "env-filter"] }
try-traits = "0.1"
tungstenite = "0.20"
url = "2.3"
uzers = "0.11"
walkdir = "2"
which = "4.2"
whoami = "1.5.0"
ws_stream_tungstenite = "0.11"
x509-parser = "0.15"
yansi = "0.5"
zeroize = "1.5"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "unwind"
strip = "symbols"
overflow-checks = true

[workspace.lints.clippy]
get_first = "allow"

[patch.crates-io]
x509-parser = { git = 'https://github.com/thin-edge/x509-parser.git', branch = "ring-0.17" }
