[package]
name = "tedge_dm_agent"
version = "0.1.0"
edition = "2018"
authors = ["thin-edge.io team <info@thin-edge.io>"]
license = "Apache-2.0"
readme = "README.md"
description = "The daemon providing monitoring and remote management capabilities to tedge"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thin_edge_json = {path = "../mapper/thin_edge_json" }
mqtt_client = {path = "../common/mqtt_client" }
chrono = "0.4"
futures = "0.3"
tokio = { version = "1.1", features = ["rt", "sync"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = { version = "0.1", features = ["attributes", "log"] }
tracing-subscriber = "0.2"

[dev-dependencies]
assert_matches = "1.4"
