[package]
name = "tedge-mapper"
version = "0.1.0"
edition = "2018"

[dependencies]
c8y_json_translator = {version = "0.1.0", path = "../translator/c8y_json_translator"}
chrono = "0.4.19"
env_logger = "0.8.2"
log = "0.4.14"
mqtt_client = {version = "0.1.0", path = "../mqtt/mqtt_client"}
tokio = { version = "1.1.0", features = ["full"] }
