[package]
name = "tedge"
version = "0.2.0"
edition = "2018"
authors = ["thin-edge.io team <info@thin-edge.io>"]
license = "Apache-2.0"
readme = "README.md"
description = "tedge is the cli tool for thin-edge.io"

[package.metadata.deb]
depends = "mosquitto"
maintainer-scripts = "configuration/debian/tedge"

[dependencies]
anyhow = "1.0"
certificate = {path = "../common/certificate" }
chrono = "0.4"
futures = "0.3"
mqtt_client = {path = "../common/mqtt_client" }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
rpassword = "5.0"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
tempfile = "3.2"
thiserror = "1.0"
tokio = { version = "1.6", features = ["rt", "signal", "io-util", "sync"] }
toml = "0.5"
url = "2.2"
which = "4.0"
tedge_config = { path = "../tedge_config" }
tedge_users = { path = "../common/tedge_users" }

[dev-dependencies]
assert_cmd = "1.0"
assert_matches = "1.4"
mockito = "0.29"
pem = "0.8"
predicates = "1.0"
which = "4.0"

[features]
integration-test = []
mosquitto-available = []      # Enable tests requesting mosquitto installed
root-access = []              # Enable tests requesting root access
tedge-user = []               # Enable tests requesting a tedge user
