[package]
name = "tedge_config"
version = "0.2.4"
authors = ["Software AG <thin-edge-team@softwareag.com>"]
edition = "2018"

[dependencies]
certificate = { path = "../common/certificate" }
serde = { version = "1.0", features = ["derive"] }
tedge_utils = { path = "../common/tedge_utils" }
tempfile = "3.2"
thiserror = "1.0"
toml = "0.5"
url = "2.2"

[dev-dependencies]
assert_matches = "1.4"
tempfile = "3.2"
