[package]
name = "batcher"
version = "0.3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
tokio = { version = "1.8", features = ["sync", "time"] }

[dev-dependencies]
tokio = { version = "1.8", features = ["rt", "macros"] }
