[package]
name = "certificate"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rcgen = { version = "0.8.11", features = ["pem", "zeroize"] }
sha-1 = "0.9"
thiserror = "1.0"
x509-parser = "0.9"
zeroize = "1.2"

[dev-dependencies]
base64 = "0.13"
pem = "0.8"
anyhow = "1.0.40"
assert_matches = "1.5.0"
