[package]
name = "certificate"
version = "0.4.1"
authors = ["thin-edge.io team <info@thin-edge.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rcgen = { version = "0.8", features = ["pem", "zeroize"] }
sha-1 = "0.9"
thiserror = "1.0"
x509-parser = "0.12"
zeroize = "1.4"

[dev-dependencies]
anyhow = "1.0"
assert_matches = "1.5"
base64 = "0.13"
pem = "1.0"
