[package]
name = "flockfile"
version = "0.3.1"
authors = ["Software AG <thin-edge-team@softwareag.com>"]
edition = "2018"

[dependencies]
thiserror = "1.0"

[target.'cfg(unix)'.dependencies]
tracing = { version = "0.1", features = ["log"] }
nix = "0.21"

[dev-dependencies]
assert_matches = "1.5"
tempfile = "3.2"
