[package]
name = "flockfile"
version = "0.3.2"
authors = ["Software AG <thin-edge-team@softwareag.com>"]
edition = "2018"

[dependencies]
thiserror = "1.0"

[target.'cfg(unix)'.dependencies]
nix = "0.23"
tracing = { version = "0.1", features = ["log"] }

[dev-dependencies]
assert_matches = "1.5"
tempfile = "3.2"
