[package]
name = "mqtt_client"
version = "0.3.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
rumqttc = "0.8.0"
thiserror = "1.0"
tokio = { version = "1.8", features = ["sync", "macros"] }
mockall = "0.10"
async-trait = "0.1"

[dev-dependencies]
anyhow= "1.0"
async-log = "2.0"
env_logger = "0.9"
futures = "0.3"
futures-timer = "3.0"
json = "0.12"
log = "0.4"
rand = "0.8"
rumqttd = "0.7"
rumqttlog = "0.7"
serde = "1.0.126"
tedge_utils = { path = "../../common/tedge_utils" }
tokio-test = "0.4"

[features]
integration-test = []
