[package]
name = "mqtt_client"
version = "0.4.1"
authors = ["thin-edge.io team <info@thin-edge.io>"]
edition = "2021"

[dependencies]
async-trait = "0.1"
mockall = "0.10"
rumqttc = "0.9"
thiserror = "1.0"
tokio = { version = "1.12", features = ["sync", "macros"] }

[dev-dependencies]
anyhow = "1.0"
async-log = "2.0"
env_logger = "0.9"
futures = "0.3"
futures-timer = "3.0"
json = "0.12"
log = "0.4"
rand = "0.8"
serde = "1.0"
tedge_utils = { path = "../../common/tedge_utils" }
tokio-test = "0.4"

[features]
integration-test = []
