[package]
name = "mqtt_tests"
version = "0.4.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
fastrand = "1.5"
rumqttc = "0.8.0"
rumqttd = "0.7"
rumqttlog = "0.7"
tokio = { version = "1.9", default_features = false, features = [ "fs", "io-util", "macros", "rt-multi-thread","signal"] }
