[package]
name = "service"
description = "Service abstraction"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1.1.0", features = ["signal", "macros"] }
thiserror = "1.0.23"
futures = "0.3.12"
async-trait = "0.1.42"
log = "0.4"

[dev-dependencies]
tokio = { version = "1.1.0", features = ["full"] }
