[package]
name = "tedge_utils"
version = "0.2.4"
edition = "2018"
authors = ["thin-edge.io team <info@thin-edge.io>"]
license = "Apache-2.0"
description = "tedge_utils provide utilities for thin-edge.io components"

[dependencies]
tempfile = "3.2"
thiserror = "1.0"
tokio = { version = "1.8", default_features = false, features = ["signal"] }

[dev-dependencies]
assert_matches = "1.5"
