[package]
name = "az_mapper"
version = "0.1.0"
edition = "2018"
authors = ["thin-edge.io team <info@thin-edge.io>"]
license = "Apache-2.0"
description = "az_mapper is the mapper that translates to az data model."

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
c8y_translator_lib = {path = "../cumulocity/c8y_translator_lib" }
chrono = "0.4"
clock = {path = "../../common/clock" }
env_logger = "0.8"
flockfile = {path = "../../common/flockfile" }
log = "0.4"
mapper_converter = { path = "../mapper" }
mqtt_client = {path = "../../common/mqtt_client" }
tedge_config = {path = "../../tedge_config" }
thin_edge_json = {path = "../../mapper/thin_edge_json"}
thiserror = "1.0"
tokio = { version = "1.1", features = ["full"] }
tracing = { version = "0.1", features = ["attributes", "log"] }
tracing-subscriber = "0.2"
users = "0.11"

[dev-dependencies]
assert-json-diff = "2.0"
serde_json = "1.0"
assert_matches = "1.5"
tokio-test = "0.4"
