[package]
name = "collectd_mapper"
version = "0.1.0"
edition = "2018"
authors = ["thin-edge.io team <info@thin-edge.io>"]
license = "Apache-2.0"
readme = "README.md"
description = "The daemon providing monitoring and remote management capabilities to tedge"

[package.metadata.deb]
depends = "tedge"
maintainer-scripts = "configuration/debian/collectd_mapper"

[package.metadata.deb.systemd-units]
unit-scripts = "../../configuration/init/systemd"
unit-name = "collectd-mapper"
enable = false
start = false
stop-on-upgrade = false

[dependencies]
thin_edge_json = {path = "../thin_edge_json" }
clock = {path = "../../common/clock" }
mqtt_client = {path = "../../common/mqtt_client" }
chrono = "0.4"
futures = "0.3"
tokio = { version = "1.1", features = ["rt", "sync", "time"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = { version = "0.1", features = ["attributes", "log"] }
tracing-subscriber = "0.2"
mockall = "0.9"
async-trait = "0.1"
tedge_config = {path = "../../tedge_config" }
users = "0.11"

[dev-dependencies]
assert_matches = "1.4"
tokio-test = "0.4"
