[package]
name = "cumulocity-mapper"
version = "0.1.0"
authors = ["diw"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mapper"
path = "src/mapper.rs"

[dependencies]
open_json = { path = "../open_json", version = "0.1.0" }
rumqttc = "0.2.0"
