[package]
name = "cumulocity-mapper"
version = "0.1.0"
authors = ["diw"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mapper"
path = "src/mapper.rs"

[dependencies]
tokio = { version = "0.3", features = ["full"] }
open_json = { path = "../open_json", version = "0.1.0" }
rumqttc = "0.2.0"
tokio-compat-02 = "0.1.2"  # Required because rumqttc use tokio 0.2

[dev-dependencies]
tokio-test = "0.3.0"
futures = "0.3.8"
