[package]
name = "tedge_dm_agent"
version = "0.1.0"
edition = "2018"
authors = ["thin-edge.io team <info@thin-edge.io>"]
license = "Apache-2.0"
readme = "README.md"
description = "The daemon providing monitoring and remote management capabilities to tedge"

[package.metadata.deb]
depends = "tedge"
maintainer-scripts = "configuration/debian/tedge_dm_agent"

[package.metadata.deb.systemd-units]
unit-scripts = "../../configuration/init/systemd"
unit-name = "tedge-dm-agent"
enable = false
start = false
stop-on-upgrade = false

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
futures = "0.3"
mockall = "0.9"
mqtt_client = {path = "../../common/mqtt_client" }
thin_edge_json = {path = "../thin_edge_json" }
thiserror = "1.0"
tokio = { version = "1.1", features = ["rt", "sync", "time"] }
tracing = { version = "0.1", features = ["attributes", "log"] }
tracing-subscriber = "0.2"

[dev-dependencies]
assert_matches = "1.4"
tokio-test = "0.4.1"
