[package]
name = "software_management"
version = "0.1.0"
authors = ["diw"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
env_logger = "0.8"
log = "0.4"
structopt = "0.3"
tokio = { version = "1.6", features = ["rt"] }
mqtt_client = {path = "../../common/mqtt_client" }
